{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "ea5edcd5-9a02-45d8-8b55-80f7eae29835",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "2bd52e7c-2ec6-40a2-b09e-b14ad2ef13b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dd149de5-9a94-4cdf-8f1d-2e46703ef21f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3f179060-e397-44d1-9bd4-23767eca4a70",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3d2d9943-3d96-4053-b609-530c6e4d5858",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b8b05d50-dad2-47f1-9ef5-e4d6519fc9e4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "efcadb09-684d-4706-bcaf-05ea197f648c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "46f38adc-42c7-4388-9855-73ed2001be3d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3efb4413-d3a5-4c82-bcd3-6ac257f87618",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Look",
            "id": "b03d19d3-9640-4793-8549-eb053ab7123f",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "712d3ff4-6a2c-4e2e-b7cf-2ad1cdf23730",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "31c39cdb-41b6-426e-aa22-7c411ea4c875",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fca7b3e7-56e4-4a02-af62-ea605b470daa",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cf9384f-f4b1-40f3-b414-832ae2eaa1e6",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shoot",
            "id": "506e1e56-4f15-4089-83d8-62097d7f4045",
            "actions": [
                {
                    "name": "Primary",
                    "type": "Button",
                    "id": "7ea11ce1-0f12-4823-9148-59fdef487db8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e96cc301-d663-47d7-880a-1a9987df8a8f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Primary",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}